--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -1,20 +1,37 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Django Blog</title>
+  <meta charset="UTF-8" />
+  <title>{% block title %}Django Blog{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Django Blog</h1>
+    <nav>
+      <a href="{% url 'home' %}">Home</a>
+      {% if user.is_authenticated %}
+        <a href="{% url 'profile' %}">Profile</a>
+        <a href="{% url 'logout' %}">Logout</a>
+      {% else %}
+        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'register' %}">Register</a>
+      {% endif %}
+    </nav>
   </header>
 
+  {% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+      <li class="message {{ message.tags }}">{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+
   <main>
-    {% block content %}
-    {% endblock %}
+    {% block content %}{% endblock %}
   </main>
 
-  <!-- <script src="{% static 'blog/js/script.js' %}"></script> -->
+  <script src="{% static 'blog/js/script.js' %}"></script>
 </body>
 </html>
